# HFT-Lite

./: .gitignore  ARCHITECTURE.md  README.md  __init__.py  architecture.txt  main.py  pyproject.toml  run_monitor.py
config/: config.sample.yaml
core/: __init__.py  config.py  event_bus.py  interfaces.py  types.py
docs/: ARCHITECTURE.md
execution/: __init__.py
gateways/: __init__.py
hft_engine/config/: __init__.py  execution_config.json  execution_loader.py  loader.py  symbol_mappings.json
hft_engine/core/: account_state.py  arbitrage.py  database.py  executor.py  fee_model.py  normalized_tick.py  order_book.py
hft_engine/gateways/: ibkr_client.py  ibkr_lookup.py  kalshi_rest.py  kalshi_websocket.py  test_ibkr_client.py  test_kalshi_websocket.py
hft_engine/monitor/: __init__.py  arbitrage_monitor.py  logger.py
hft_engine/normalizers/: __init__.py  base.py  ibkr_normalizer.py  kalshi_normalizer.py  symbol_map.py  test_normalizers.py
hft_lite.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
strategy/: __init__.py
tests/: __init__.py  test_core_types.py  test_event_bus.py
utils/: __init__.py  helpers.py  logging.py
